--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/slider": "3.0.3",
     "@react-native-picker/picker": "1.16.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
