Atualize ambiente local com Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,34 @@ services:
     command: expo start --host 0.0.0.0 --web
     ports:
       - 19006:19006
+    depends_on:
+      - backend
     volumes:
       - ./:/app:rw
       - /app/node_modules
     environment:
       NODE_ENV: development
+
+  # Django back-end
+  backend:
+    build:
+      context: .
+      dockerfile: ./etc/backend.dockerfile
+    command: python manage.py runserver 0.0.0.0:8000
+    ports:
+      - 19800:8000
+    depends_on:
+      - database
+    volumes:
+      - ./backend:/app:rw
+    environment:
+      SECRET_KEY: not-a-secret
+
+  # Back-end database
+  database:
+    image: postgres:14-alpine
+    volumes:
+      - ./.local/database:/var/lib/postgresql/data:rw
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
+
