--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     build:
       context: .
       dockerfile: ./etc/backend.dockerfile
-    command: python manage.py runserver 0.0.0.0:8000
+    command: sh -c './manage.py migrate && ./manage.py runserver 0.0.0.0:8000'
     ports:
       - 19800:8000
     depends_on:
