--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
   backend:
     build:
       context: ./backend
+    image: ${DOCKER_IMAGE:-local/tp-web-backend}
     command: sh -c './manage.py migrate && ./manage.py runserver 0.0.0.0:8000'
     ports:
       - 19800:8000
