--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Instala o CLI do Heroku
         run: curl https://cli-assets.heroku.com/install.sh | sh
+      - name: Autentica usuário no Heroku
+        run: heroku login
       - name: Prepara a imagem Docker do projeto
         run: docker-compose build frontend
       - name: Compila arquivos estáticos da aplicação
