--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -22,10 +22,14 @@ jobs:
         run: git clone -o heroku https://heroku:${HEROKU_API_KEY}@git.heroku.com/${HEROKU_APP}.git
       - name: Copia arquivos compilados para o diretório do Heroku
         run: cp -r frontend/build/* $HEROKU_APP/
+      - name: Configura buildpack do Heroku
+        run: |
+          cd $HEROKU_APP
+          echo '{"root": "."}' > static.json
+          heroku buildpacks:set heroku-community/static
       - name: Envia arquivos para o Heroku
         run: |
           cd $HEROKU_APP
-          echo "{}" > static.json  # Necessário para o buildpack do Heroku
           git config user.email "github@localhost"
           git config user.name "GitHub"
           git add --all
