--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           cd $HEROKU_APP
           echo '{"root": "."}' > static.json
-          heroku buildpacks:set heroku-community/static
+          # heroku buildpacks:set heroku-community/static
       - name: Envia arquivos para o Heroku
         run: |
           cd $HEROKU_APP
