--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - /app/node_modules
     environment:
       NODE_ENV: development
-      REACT_APP_API_HOST: http://localhost:19800/
+      REACT_APP_API_HOST: ${REACT_APP_API_HOST:-http://localhost:19800/}
 
   # Django back-end
   backend:
