Configura rotas para o router do React

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Configura buildpack do Heroku
         run: |
           cd $HEROKU_APP
-          echo '{"root": "."}' > static.json
+          echo '{"root": ".", "routes": {"/*": "index.html"}}' > static.json
           # heroku buildpacks:set heroku-community/static
       - name: Envia arquivos para o Heroku
         run: |
