--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -34,5 +34,5 @@ jobs:
           git config user.email "github@localhost"
           git config user.name "GitHub"
           git add --all
-          git commit -m "Atualiza com commit $GITHUB_SHA"
+          git commit --allow-empty -m "Atualiza com commit $GITHUB_SHA"
           git push heroku master
